Fixes for Integer(int) in java.lang.Integer has been deprecated